# sequent-core

./: .gitignore  Cargo.lock.copy  Cargo.toml  README.md  deny.toml  flake.nix
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  update-flake.yml
.reuse/: dep5
browserstack/conf/: local-test.conf.js
fixtures/: ballot.json  cyphertext.json
src/: _main.rs  ballot.rs  ballot_verifier.rs  encrypt.rs  lib.rs  main.rs  plaintext.rs  util.rs  wasm.rs
src/wasm/: test.rs  wasm_ballot.rs
src/wasm/test/: test.rs
